--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ h1{
     align-items: center;
     justify-content: center;
     flex-direction:column;
+}
     
+#answer{
+font-size: 20px;
+font-family: 'Patrick Hand', cursive;
+text-align: center;
+}
 
-  }
+  
+
+  
